corrected spilling mistake and used name instead of orgName

--- a/frontend/src/Components/Organisation/organisation.css
+++ b/frontend/src/Components/Organisation/organisation.css
@@ -1,7 +1,7 @@
 /*===================================================*/
 /**************** Organisation Card *****************/
 /*=================================================*/
-.single-orgonaization{
+.single-organisation{
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2em;
